--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
     background: #fff;
 }
 .img ul li img{
-    width: 10%;
+    width: 200px;
 }
 .img ul li{
     position: absolute;
@@ -17,26 +17,26 @@ body{
 }
 .img ul li:nth-child(2){
     position: absolute;
-    top: 120px;
-    left: 30px;
+    top: 320px;
+    left: 360px;
 }
 .img ul li:nth-child(3){
     position: absolute;
-    top: 140px;
-    left: 60px;
-    top: 20px;
+    top: 200px;
+    left: 380px;
+    top: 120px;
 }
 .img ul li:nth-child(4){
     position: absolute;
-    top: 160px;
-    left: 68px;
-    top: 70px;
+    top: 260px;
+    left: 268px;
+    top: 170px;
 }
 .img ul li:nth-child(5){
     position: absolute;
     top: 180px;
-    left: 80px;
-    top: 100px;
+    left: 240px;
+    top: 230px;
 }
 
 
